# fatfs-sys

./: .gitmodules  Cargo.toml  README.md  bindings.rs  build.rs  wrapper.h
fatfs/source/: diskio.c
src/: lib.rs
