[package]
name = "hactool-sys"
version = "0.4.2"
license = "ISC"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Unsafe Rust bindings for hactool, a program and library for Nintendo Switch file formats. Currently untested."
homepage = "https://github.com/leo60228/hactool-sys"
repository = "https://github.com/leo60228/hactool-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.48.0"
cc = "1.0"
