[package]
name = "fatfs-sys"
version = "0.1.0"
license = "ISC"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Unsafe Rust bindings for fatfs, a library for exFAT and FAT32 filesystems. Currently untested."
homepage = "https://github.com/leo60228/fatfs-sys"
repository = "https://github.com/leo60228/fatfs-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.48.0"
cc = "1.0"
